# simboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml
.envs/: README.md
.envs/dev/: backend.env.example  frontend.env.example
.envs/dev_docker/: backend.env.example  frontend.env.example
.envs/example/: .env.example  backend.env.example  backend.production.env.example  db.env.example  frontend.env.example
.envs/local/: README.md  backend.env.example
.envs/local_docker/: backend.env.example
.envs/prod/: backend.env.example
.envs/production/: backend.env.example  frontend.env.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  devops.yml  (+3 more)
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: meta.py  version.py
backend/app/api/routers/: ai.py  simulation.py
backend/app/common/: dependencies.py
backend/app/common/models/: mixins.py
backend/app/common/schemas/: base.py  utils.py
backend/app/core/: config.py  database.py  database_async.py  exceptions.py  logger.py
backend/app/db/: __init__.py  artifact.py  link.py  simulation.py
backend/app/features/assistant/: __init__.py  api.py  llm_generator.py  orchestrator.py  registry.py  schemas.py  service.py  snapshot.py
backend/app/features/ingestion/: api.py  ingest.py  models.py  schemas.py
backend/app/features/ingestion/parsers/: case_docs.py  case_status.py  e3sm_timing.py  parser.py  types.py
backend/app/features/machine/: api.py  models.py  schemas.py  utils.py
backend/app/features/simulation/: anchor.py  api.py  config_delta.py  link_utils.py  models.py  schemas.py
backend/app/features/upload/: api.py  ingest.py  parsers.py  router.py  schemas.py  service.py
backend/app/features/user/: api.py  manager.py  models.py  oauth.py  schemas.py
backend/app/features/user/api/: oauth.py
backend/app/features/user/auth/: oauth.py
backend/app/features/user/schemas/: user.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  artifact.py  base.py  link.py  machine.py  simulation.py
backend/app/scripts/: README.md  rollback_seed.py  seed.py  simulations.json
backend/app/scripts/db/: rollback_seed.py  run_migrations.py  seed.py  simulations.json
backend/app/scripts/ingestion/: hpc_archive_ingestor.py  hpc_upload_archive_ingestor.py  nersc_archive_ingestor.py  verify_legacy_state.py
backend/app/scripts/ingestion/sites/: chrysalis.sh
backend/app/scripts/users/: provision_service_account.py
backend/docs/154-ingestions/: codex-implementation-plan.md  ingestion-sites-onboarding.md
backend/docs/174-zppy-links/: phase-1-case-link-storage.md  phase-2-diagnostics-link-api.md  phase-3-link-aggregation.md  phase-4-provenance-scanner.md  plan.md
backend/migrations/: env.py
backend/migrations/versions/: 20251007_102558_708f26079ad0_initial_migration.py  20251007_102637_d666c49ea3bd_seed_status_lookup_table.py  20251007_102705_3549db208f70_seed_machines_table.py  20251007_134339_d01eac7d24ce_remove_variable_model.py  20251007_134928_71f46a7e00a4_remove_total_years_field_from_.py  20251013_110710_7fea50e608c8_initial_migration_file.py  20251013_110759_6bf905412036_seed_status_lookup_table.py  20251013_110832_d78e4ce0ddc7_seed_machines_table.py  20251014_120410_8e8b52805f00_update_git_fields_on_simulation_for_.py  20251028_132906_95bc627987b7_add_user_tables_for_auth.py  20251028_134809_0ce2ab7d6d15_make_hashed_password_nullable.py  20251030_112453_1134b6c8674f_connect_user_to_simulation_model.py  20260319_000000_normalize_machine_names_lowercase.py  20260330_000000_add_case_hash_to_simulations.py  20260331_000000_rename_canonical_to_reference.py  20260414_000000_add_case_hash_to_simulations.py  20260526_120000_add_processed_execution_ids_to_ingestions.py  20260601_112110_e1a37fccb0f7_.py  20260603_120000_remove_case_reference_simulation.py  20260611_090000_add_editor_role_and_github_membership_state.py  20260611_090000_add_github_membership_state.py  20260625_120000_add_case_metadata_fields.py  20260625_130000_add_case_owned_external_links.py  20260629_000000_scope_execution_id_uniqueness_to_case.py
backend/scripts/upload/: test_parsers.py
backend/tests/: conftest.py  test_main.py
backend/tests/api/routers/: test_ai.py  test_machines.py  test_simulation.py
backend/tests/common/: test_dependencies.py  test_exceptions.py
backend/tests/common/schemas/: test_utils.py
backend/tests/core/: test_config.py  test_database_async.py
backend/tests/features/assistant/: __init__.py  test_api.py  test_llm_generator.py  test_orchestrator.py  test_service.py  test_snapshot.py
backend/tests/features/ingestion/: test_api.py  test_hpc_upload_archive_ingestor.py  test_ingest.py  test_nersc_archive_ingestor.py  test_schemas.py  test_token_ingestion.py  test_verify_legacy_state.py
backend/tests/features/ingestion/parsers/: test_case_docs.py  test_case_status.py  test_e3sm_timing.py  test_git_info.py  test_parser.py  test_readme_case.py  test_utils.py
backend/tests/features/machine/: test_api.py  test_models.py  test_schemas.py  test_utils.py
backend/tests/features/simulation/: test_api.py  test_link_utils.py  test_models.py  test_schemas.py
backend/tests/features/user/: test_api.py  test_manager.py  test_models.py  test_oauth.py  test_schemas.py
backend/tests/features/user/api/: test_oauth.py
backend/tests/features/user/auth/: test_oauth.py
backend/tests/features/user/schemas/: test_user.py
backend/tests/schemas/: test_simulation.py
certs/: generate-dev-certs.sh  generate-local-certs.sh
docs/: README.md  hpc_api_token_authentication.md
frontend/: .env.example  .env.template  .prettierignore  .prettierrc.json  Dockerfile  Makefile  README.md  eslint.config.js  index.html  nginx-backend-not-found.conf  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
(+137 files in other folders)
