[project]
name = "simboard-backend"
version = "0.1.0"
description = "SimBoard backend for the E3SM project"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Tom Vo", email = "vo13@llnl.com" }]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
  # --- Core backend ---
  "fastapi[standard]>=0.120.1,<0.121.0",
  "uvicorn[standard]>=0.30.1,<0.31.0",
  "sqlalchemy>=2.0.44,<2.1.0",
  "alembic>=1.13.2,<1.14.0",
  "psycopg[binary]>=3.2.1,<3.3.0",
  "asyncpg>=0.30.0,<0.31.0",

  # --- Models & validation ---
  "pydantic>=2.12.3,<2.13.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",

  # --- Authentication / Authorization ---
  "fastapi-users[sqlalchemy,oauth]>=14.0.0,<15.0.0",
  "python-jose>=3.5.0",

  # --- AI / NLP tools ---
  "transformers>=4.57.1,<4.58.0",
  "sentence-transformers>=5.0.0,<5.1.0",
]

[dependency-groups]
dev = [
  # --- Testing ---
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "pytest-asyncio==1.2.0",
  "factory_boy==3.3.3",

  # --- Development Tools ---
  "ruff==0.14.1",
  "pre-commit==4.3.0",
  "mypy==1.18.2",

  # --- Runtime / ML ---
  "torch==2.7.1",
  "ipykernel==7.0.0",
]

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "docs",
  "node_modules",
  "site-packages",
  "venv",
]

[tool.ruff.lint]
# E4 - whitespace
# E7 - multiple-statements
# E9 - trailing-whitespace
# F - Enable Pyflakes
# B - Enable flake8-bugbear
# W - Enable pycodestyle
# C901 - complex-structure
# D - Enable flake8-docstrings
# I - Enable isort
# E - Enable pycodestyle errors
select = ["E4", "E7", "E9", "F", "B", "W", "C901", "I", "E"]

# E501 - line-too-long
ignore = ["E501"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# FastAPI’s use of Depends(...) in defaults is safe and idiomatic. Ignore B008 (do not call a method in argument defaults) in router files.
"app/features/*/api.py" = ["B008"]
"app/features/*/api/*.py" = ["B008"]

[tool.pytest.ini_options]
# Docs: https://docs.pytest.org/en/7.2.x/reference/customize.html#configuration
junit_family = "xunit2"
addopts = "--cov=app --cov-report term --cov-report html:tests_coverage_reports/htmlcov --cov-report xml:tests_coverage_reports/coverage.xml -s"
python_files = ["tests.py", "test_*.py"]

[tool.mypy]
# Docs: https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

plugins = ["pydantic.mypy"]
